@@ -21,7 +21,6 @@ import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.EventRequestData;
 import uk.gov.hmcts.reform.ccd.client.model.StartEventResponse;
-import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
 import uk.gov.hmcts.reform.prl.clients.ccd.records.StartAllTabsUpdateDataContent;
 import uk.gov.hmcts.reform.prl.constants.PrlAppsConstants;
@@ -55,7 +54,6 @@ import uk.gov.hmcts.reform.prl.models.complextypes.manageorders.FL404;
 import uk.gov.hmcts.reform.prl.models.documents.Document;
 import uk.gov.hmcts.reform.prl.models.dto.GeneratedDocumentInfo;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
-import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.HearingData;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.HearingDataPrePopulatedDynamicLists;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ManageOrders;
@@ -133,25 +131,8 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 @RunWith(MockitoJUnitRunner.Silent.class)
 public class ManageOrdersControllerTest {
 
-    @InjectMocks
-    private ManageOrdersController manageOrdersController;
-
-    @Mock
-    private ObjectMapper objectMapper;
-
-    @Mock
-    private TaskUtils taskUtils;
-
-    private CaseData caseData;
-
-    @Mock
-    private AuthorisationService authorisationService;
-
-    @Mock
-    private CafcassDateTimeService cafcassDateTimeService;
-
-    public static final String authToken = "Bearer TestAuthToken";
-    public static final String s2sToken = "s2s AuthToken";
+    private static final String authToken = "Bearer TestAuthToken";
+    private static final String s2sToken = "s2s AuthToken";
     private static final String CLIENT_CONTEXT = """
         {
           "client_context": {
@@ -184,6 +165,23 @@ public class ManageOrdersControllerTest {
 
     private static final String ENCRYPTED_CLIENT_CONTEXT = Base64.getEncoder().encodeToString(CLIENT_CONTEXT.getBytes());
 
+    @InjectMocks
+    private ManageOrdersController manageOrdersController;
+
+    @Mock
+    private ObjectMapper objectMapper;
+
+    @Mock
+    private TaskUtils taskUtils;
+
+    private CaseData caseData;
+
+    @Mock
+    private AuthorisationService authorisationService;
+
+    @Mock
+    private CafcassDateTimeService cafcassDateTimeService;
+
     @Mock
     private ManageOrderEmailService manageOrderEmailService;
 
@@ -205,8 +203,6 @@ public class ManageOrdersControllerTest {
     @Mock
     private UserDetails userDetails;
 
-    @Mock
-    private IdamClient idamClient;
     @Mock
     private AmendOrderService amendOrderService;
 
@@ -296,7 +292,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testSubmitApplicationEventValidation() throws Exception {
+    public void testSubmitApplicationEventValidation() {
         CaseData expectedCaseData = CaseData.builder()
             .id(12345L)
             .courtName("Horsham Court")
@@ -336,7 +332,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderWhenOrderUploaded() throws Exception {
+    public void testPopulatePreviewOrderWhenOrderUploaded() {
         // Ensure customOrderService.renderUploadedCustomOrderAndStoreOnManageOrders is called for custom order
         when(customOrderService.renderUploadedCustomOrderAndStoreOnManageOrders(any(), any(), any(), any(), any(), any()))
             .thenReturn(new HashMap<>());
@@ -421,7 +417,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderWithError() throws Exception {
+    public void testPopulatePreviewOrderWithError() {
         CaseData expectedCaseData = CaseData.builder()
             .id(12345L)
             .manageOrders(ManageOrders.builder().judgeOrMagistrateTitle(JudgeOrMagistrateTitleEnum.justicesLegalAdviser).build())
@@ -460,7 +456,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderWithErrorblank() throws Exception {
+    public void testPopulatePreviewOrderWithErrorblank() {
         CaseData expectedCaseData = CaseData.builder()
             .id(12345L)
             .justiceLegalAdviserFullName(" ")
@@ -501,7 +497,7 @@ public class ManageOrdersControllerTest {
 
 
     @Test
-    public void testManageOrderApplicationEventValidation() throws Exception {
+    public void testManageOrderApplicationEventValidation() {
 
         CaseData expectedCaseData = CaseData.builder()
             .id(12345L)
@@ -548,7 +544,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testManageOrderFL404bApplicationEventValidation() throws Exception {
+    public void testManageOrderFL404bApplicationEventValidation() {
 
         CaseData expectedCaseData = CaseData.builder()
             .id(12345L)
@@ -596,18 +592,6 @@ public class ManageOrdersControllerTest {
 
     @Test
     public void testFetchFl401DataNoticeOfProceedings() {
-        Child child = Child.builder()
-            .firstName("Test")
-            .lastName("Name")
-            .gender(female)
-            .orderAppliedFor(Collections.singletonList(childArrangementsOrder))
-            .applicantsRelationshipToChild(specialGuardian)
-            .respondentsRelationshipToChild(father)
-            .parentalResponsibilityDetails("test")
-            .build();
-
-        Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
-        List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
 
         CaseData caseData = CaseData.builder()
             .manageOrders(ManageOrders.builder().c21OrderOptions(C21OrderOptionsEnum.c21other).build())
@@ -1118,7 +1102,7 @@ public class ManageOrdersControllerTest {
 
     @Test
     @Ignore
-    public void testSubmitAmanageorderEmailValidation() throws Exception {
+    public void testSubmitAmanageorderEmailValidation() {
 
         Map<String, Object> summaryTabFields = Map.of(
             "field4", "value4",
@@ -1149,7 +1133,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTest() throws Exception {
+    public void saveOrderDetailsTest() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -1183,8 +1167,6 @@ public class ManageOrdersControllerTest {
         Child child = Child.builder()
             .childLiveWith(childLiveWithList)
             .build();
-
-        String childNames = "child1 child2";
 
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
@@ -1264,7 +1246,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsJudgeTest() throws Exception {
+    public void saveOrderDetailsJudgeTest() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -1299,24 +1281,8 @@ public class ManageOrdersControllerTest {
             .childLiveWith(childLiveWithList)
             .build();
 
-        String childNames = "child1 child2";
-
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
-
-        String cafcassEmail = "testing@cafcass.com";
-
-        Element<String> wrappedCafcass = Element.<String>builder().value(cafcassEmail).build();
-        List<Element<String>> listOfCafcassEmail = Collections.singletonList(wrappedCafcass);
-
-        DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.builder().code("12345:").label("test")
-            .build()).build();
-
-        ManageOrders manageOrders = ManageOrders.builder()
-            .nameOfLaToReviewOrder(dynamicList)
-            .cafcassEmailAddress(listOfCafcassEmail)
-            .isCaseWithdrawn(No)
-            .build();
 
         GeneratedDocumentInfo generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1374,7 +1340,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsNoOneApprovesTest() throws Exception {
+    public void saveOrderDetailsNoOneApprovesTest() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -1409,24 +1375,8 @@ public class ManageOrdersControllerTest {
             .childLiveWith(childLiveWithList)
             .build();
 
-        String childNames = "child1 child2";
-
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
-
-        String cafcassEmail = "testing@cafcass.com";
-
-        Element<String> wrappedCafcass = Element.<String>builder().value(cafcassEmail).build();
-        List<Element<String>> listOfCafcassEmail = Collections.singletonList(wrappedCafcass);
-
-        DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.builder().code("12345:").label("test")
-            .build()).build();
-
-        ManageOrders manageOrders = ManageOrders.builder()
-            .nameOfLaToReviewOrder(dynamicList)
-            .cafcassEmailAddress(listOfCafcassEmail)
-            .isCaseWithdrawn(No)
-            .build();
 
         GeneratedDocumentInfo generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1484,7 +1434,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void populateHeaderTest() throws Exception {
+    public void populateHeaderTest() {
 
         CaseData caseData = CaseData.builder()
             .manageOrders(ManageOrders.builder().build())
@@ -1520,7 +1470,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testShowPreviewOrderWhenOrderCreated() throws Exception {
+    public void testShowPreviewOrderWhenOrderCreated() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -1600,7 +1550,7 @@ public class ManageOrdersControllerTest {
 
     @Test
     @Ignore
-    public void testSubmitManageOrderCafacassEmailNotification() throws Exception {
+    public void testSubmitManageOrderCafacassEmailNotification() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -1622,10 +1572,6 @@ public class ManageOrdersControllerTest {
             .solicitorEmail("test@test.com")
             .build();
 
-        CaseDetails caseDetails = CaseDetails.builder()
-            .state(State.CASE_ISSUED.getValue())
-            .build();
-
         Element<PartyDetails> wrappedApplicants = Element.<PartyDetails>builder().value(applicant).build();
         List<Element<PartyDetails>> listOfApplicants = Collections.singletonList(wrappedApplicants);
 
@@ -1639,19 +1585,8 @@ public class ManageOrdersControllerTest {
             .childLiveWith(childLiveWithList)
             .build();
 
-        String childNames = "child1 child2";
-
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
-
-        String cafcassEmail = "testing@cafcass.com";
-
-        Element<String> wrappedCafcass = Element.<String>builder().value(cafcassEmail).build();
-        List<Element<String>> listOfCafcassEmail = Collections.singletonList(wrappedCafcass);
-
-        ManageOrders manageOrders = ManageOrders.builder()
-            .cafcassEmailAddress(listOfCafcassEmail)
-            .build();
 
         GeneratedDocumentInfo generatedDocumentInfo = GeneratedDocumentInfo.builder()
             .url("TestUrl")
@@ -1685,24 +1620,10 @@ public class ManageOrdersControllerTest {
 
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
-        uk.gov.hmcts.reform.ccd.client.model.CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-            .CallbackRequest.builder()
-            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
-                             .id(12345L)
-                             .data(stringObjectMap)
-                             .state(State.CASE_ISSUED.getValue())
-                             .build())
-            .build();
         when(authorisationService.isAuthorized(any(),any())).thenReturn(true);
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(objectMapper.convertValue(caseData, CaseData.class)).thenReturn(caseData);
         when(caseSummaryTabService.updateTab(caseData)).thenReturn(summaryTabFields);
-        AboutToStartOrSubmitCallbackResponse aboutToStartOrSubmitCallbackResponse =
-            manageOrdersController.finalizeOrderSubmissionAndSendNotifications(
-                authToken,
-                s2sToken,
-                callbackRequest
-            );
         verify(manageOrderEmailService, times(1))
             .sendEmailWhenOrderIsServed("Bearer TestAuthToken", caseData, stringObjectMap);
         verify(manageOrderService, times(1))
@@ -1744,8 +1665,6 @@ public class ManageOrdersControllerTest {
         Child child = Child.builder()
             .childLiveWith(childLiveWithList)
             .build();
-
-        String childNames = "child1 child2";
 
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
@@ -1808,7 +1727,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTestWithResetChildOptions() throws Exception {
+    public void saveOrderDetailsTestWithResetChildOptions() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -1842,8 +1761,6 @@ public class ManageOrdersControllerTest {
         Child child = Child.builder()
             .childLiveWith(childLiveWithList)
             .build();
-
-        String childNames = "child1 child2";
 
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
@@ -1918,7 +1835,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testManageOrderMidEventWithNullDoYouWantToServeOrder() throws Exception {
+    public void testManageOrderMidEventWithNullDoYouWantToServeOrder() {
 
         caseData = CaseData.builder()
             .id(12345L)
@@ -1948,7 +1865,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testManageOrderMidEventForAmendOrderSelection() throws Exception {
+    public void testManageOrderMidEventForAmendOrderSelection() {
 
         caseData = CaseData.builder()
             .id(12345L)
@@ -1973,7 +1890,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testAddUploadOrder() throws Exception {
+    public void testAddUploadOrder() {
 
         ManageOrders manageOrders = ManageOrders.builder()
             .isCaseWithdrawn(Yes)
@@ -2030,7 +1947,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testWhenToServeOrder_customOrder_shouldSetNameOfOrderBeforeAddingToCollection() throws Exception {
+    public void testWhenToServeOrder_customOrder_shouldSetNameOfOrderBeforeAddingToCollection() {
         // Test that when createCustomOrder with serve now, nameOfOrder is set from customOrderNameOption
         // before calling addOrderDetailsAndReturnReverseSortedList, ensuring correct orderTypeId label
 
@@ -2090,7 +2007,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testAddUploadOrderWithNullDoYouWantToServeOrder() throws Exception {
+    public void testAddUploadOrderWithNullDoYouWantToServeOrder() {
 
         ManageOrders manageOrders = ManageOrders.builder()
             .isCaseWithdrawn(Yes)
@@ -2147,7 +2064,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testAddUploadOrderDoesntAmmendSlipRule() throws Exception {
+    public void testAddUploadOrderDoesntAmmendSlipRule() {
 
         ManageOrders manageOrders = ManageOrders.builder()
             .isCaseWithdrawn(Yes)
@@ -2204,7 +2121,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testAddUploadOrderDoesntNeedServing() throws Exception {
+    public void testAddUploadOrderDoesntNeedServing() {
 
         ManageOrders manageOrders = ManageOrders.builder()
             .isCaseWithdrawn(Yes)
@@ -2415,19 +2332,7 @@ public class ManageOrdersControllerTest {
 
 
     @Test
-    public void testupdateManageOrdersisSdoSelectedNo() throws Exception {
-        Child child = Child.builder()
-            .firstName("Test")
-            .lastName("Name")
-            .gender(female)
-            .orderAppliedFor(Collections.singletonList(childArrangementsOrder))
-            .applicantsRelationshipToChild(specialGuardian)
-            .respondentsRelationshipToChild(father)
-            .parentalResponsibilityDetails("test")
-            .build();
-
-        Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
-        List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
+    public void testupdateManageOrdersisSdoSelectedNo() {
 
         CaseData caseData = CaseData.builder()
             .manageOrders(ManageOrders.builder().build())
@@ -2484,19 +2389,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testupdateManageOrdersisSdoSelectedYes() throws Exception {
-        Child child = Child.builder()
-            .firstName("Test")
-            .lastName("Name")
-            .gender(female)
-            .orderAppliedFor(Collections.singletonList(childArrangementsOrder))
-            .applicantsRelationshipToChild(specialGuardian)
-            .respondentsRelationshipToChild(father)
-            .parentalResponsibilityDetails("test")
-            .build();
-
-        Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
-        List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
+    public void testupdateManageOrdersisSdoSelectedYes() {
 
         CaseData caseData = CaseData.builder()
             .manageOrders(ManageOrders.builder().build())
@@ -2553,7 +2446,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testExceptionForPopulatePreviewOrderWhenOrderUploaded() throws Exception {
+    public void testExceptionForPopulatePreviewOrderWhenOrderUploaded() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2579,13 +2472,13 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.populatePreviewOrderWhenOrderUploaded(authToken, s2sToken, PrlAppsConstants.ENGLISH, callbackRequest);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(
+            () -> manageOrdersController.populatePreviewOrderWhenOrderUploaded(authToken, s2sToken,
+                            PrlAppsConstants.ENGLISH, callbackRequest), RuntimeException.class, "Invalid Client");
     }
 
     @Test
-    public void testExceptionForPrepopulateFL401CaseDetails() throws Exception {
+    public void testExceptionForPrepopulateFL401CaseDetails() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2611,13 +2504,12 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.prepopulateCaseDetails(authToken, s2sToken, null, callbackRequest);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.prepopulateCaseDetails(authToken, s2sToken, null, callbackRequest),
+                                RuntimeException.class, "Invalid Client");
     }
 
     @Test
-    public void testExceptionForPopulateHeader() throws Exception {
+    public void testExceptionForPopulateHeader() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2643,14 +2535,13 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.populateHeader(callbackRequest, authToken, s2sToken);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.populateHeader(callbackRequest, authToken, s2sToken),
+                                RuntimeException.class, "Invalid Client");
     }
 
 
     @Test
-    public void testExceptionForPopulateHeaderFL401() throws Exception {
+    public void testExceptionForPopulateHeaderFL401() {
 
         CaseData caseDataFL401 = CaseData.builder()
             .id(12345L)
@@ -2690,7 +2581,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testExceptionForPopulateHeaderC100() throws Exception {
+    public void testExceptionForPopulateHeaderC100() {
 
         CaseData caseDataC100 = CaseData.builder()
             .id(12345L)
@@ -2731,7 +2622,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testExceptionForFinalizeOrderSubmissionAndSendNotifications() throws Exception {
+    public void testExceptionForFinalizeOrderSubmissionAndSendNotifications() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2757,13 +2648,12 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.finalizeOrderSubmissionAndSendNotifications(authToken, s2sToken, callbackRequest);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.finalizeOrderSubmissionAndSendNotifications(authToken, s2sToken, callbackRequest),
+                                RuntimeException.class, "Invalid Client");
     }
 
     @Test
-    public void testExceptionForshowPreviewOrderWhenOrderCreated() throws Exception {
+    public void testExceptionForshowPreviewOrderWhenOrderCreated() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2789,13 +2679,12 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.showPreviewOrderWhenOrderCreated(authToken, s2sToken, callbackRequest);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.showPreviewOrderWhenOrderCreated(authToken, s2sToken, callbackRequest),
+                                RuntimeException.class, "Invalid Client");
     }
 
     @Test
-    public void testExceptionForshowPreviewOrderWhenOrderCreatedWithHearingData() throws Exception {
+    public void testExceptionForshowPreviewOrderWhenOrderCreatedWithHearingData() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2811,11 +2700,6 @@ public class ManageOrdersControllerTest {
             .build();
 
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
-        uk.gov.hmcts.reform.ccd.client.model.CaseDetails caseDetails =
-            uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
-                .id(12345L)
-                .data(stringObjectMap)
-                .build();
 
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         uk.gov.hmcts.reform.ccd.client.model.CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
@@ -2834,7 +2718,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testExceptionForpopulateOrderToAmendDownloadLink() throws Exception {
+    public void testExceptionForpopulateOrderToAmendDownloadLink() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2860,13 +2744,12 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.populateOrderToAmendDownloadLink(authToken, s2sToken, callbackRequest);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.populateOrderToAmendDownloadLink(authToken, s2sToken, callbackRequest),
+                                RuntimeException.class, "Invalid Client");
     }
 
     @Test
-    public void testExceptionForAddUploadOrder() throws Exception {
+    public void testExceptionForAddUploadOrder() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2892,13 +2775,12 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.whenToServeOrder(authToken, s2sToken, null,callbackRequest);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.whenToServeOrder(authToken, s2sToken, null, callbackRequest),
+                                RuntimeException.class, "Invalid Client");
     }
 
     @Test
-    public void testExceptionForManageOrderMidEvent() throws Exception {
+    public void testExceptionForManageOrderMidEvent() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2924,13 +2806,12 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.manageOrderMidEvent(authToken, s2sToken, callbackRequest);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.manageOrderMidEvent(authToken, s2sToken, callbackRequest),
+                                RuntimeException.class, "Invalid Client");
     }
 
     @Test
-    public void testExceptionForServeOrderMidEvent() throws Exception {
+    public void testExceptionForServeOrderMidEvent() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2956,13 +2837,12 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.serveOrderMidEvent(authToken, s2sToken, callbackRequest);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.serveOrderMidEvent(authToken, s2sToken, callbackRequest),
+                                RuntimeException.class, "Invalid Client");
     }
 
     @Test
-    public void testExceptionForprePopulateJudgeOrLegalAdviser() throws Exception {
+    public void testExceptionForprePopulateJudgeOrLegalAdviser() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2988,9 +2868,8 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.prePopulateJudgeOrLegalAdviser(authToken, s2sToken, null, callbackRequest);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.prePopulateJudgeOrLegalAdviser(authToken, s2sToken, null, callbackRequest),
+                                RuntimeException.class, "Invalid Client");
     }
 
     protected <T extends Throwable> void assertExpectedException(ThrowingRunnable methodExpectedToFail, Class<T> expectedThrowableClass,
@@ -3000,7 +2879,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testNoHearingDataValidation() throws Exception {
+    public void testNoHearingDataValidation() {
         CaseData caseData = CaseData.builder()
             .createSelectOrderOptions(noticeOfProceedingsParties)
             .manageOrders(ManageOrders.builder().build())
@@ -3025,11 +2904,11 @@ public class ManageOrdersControllerTest {
 
         assertNotNull(callbackResponse);
         assertNotNull(callbackResponse.getErrors());
-        assertEquals("Please provide at least one hearing details", callbackResponse.getErrors().get(0));
+        assertEquals("Please provide at least one hearing details", callbackResponse.getErrors().getFirst());
     }
 
     @Test
-    public void testNoHearingDataSelectedValidation() throws Exception {
+    public void testNoHearingDataSelectedValidation() {
         CaseData caseData = CaseData.builder()
             .createSelectOrderOptions(noticeOfProceedingsParties)
             .manageOrders(ManageOrders.builder()
@@ -3055,11 +2934,11 @@ public class ManageOrdersControllerTest {
 
         assertNotNull(callbackResponse);
         assertNotNull(callbackResponse.getErrors());
-        assertEquals("Please provide at least one hearing details", callbackResponse.getErrors().get(0));
+        assertEquals("Please provide at least one hearing details", callbackResponse.getErrors().getFirst());
     }
 
     @Test
-    public void testMoreThanOneHearingsSelectedValidation() throws Exception {
+    public void testMoreThanOneHearingsSelectedValidation() {
         HearingData hearingData1 = HearingData.builder()
             .hearingDateConfirmOptionEnum(dateConfirmedByListingTeam)
             .build();
@@ -3091,11 +2970,11 @@ public class ManageOrdersControllerTest {
 
         assertNotNull(callbackResponse);
         assertNotNull(callbackResponse.getErrors());
-        assertEquals("Only one hearing can be created", callbackResponse.getErrors().get(0));
+        assertEquals("Only one hearing can be created", callbackResponse.getErrors().getFirst());
     }
 
     @Test
-    public void testHearingTypeAndEstimatedTimingsValidations() throws Exception {
+    public void testHearingTypeAndEstimatedTimingsValidations() {
         HearingData hearingData = HearingData.builder()
             .hearingDateConfirmOptionEnum(dateReservedWithListAssit)
             .hearingEstimatedDays("ABC")
@@ -3134,7 +3013,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testValidateAndPopulateHearingData() throws Exception {
+    public void testValidateAndPopulateHearingData() {
         CaseData expectedCaseData = CaseData.builder()
             .id(12345L)
             .courtName("Horsham Court")
@@ -3215,7 +3094,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTestForServedSavedOrder() throws Exception {
+    public void saveOrderDetailsTestForServedSavedOrder() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -3250,7 +3129,6 @@ public class ManageOrdersControllerTest {
             .childLiveWith(childLiveWithList)
             .build();
 
-        String childNames = "child1 child2";
 
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
@@ -3334,7 +3212,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTestForUploadOrder() throws Exception {
+    public void saveOrderDetailsTestForUploadOrder() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -3369,7 +3247,6 @@ public class ManageOrdersControllerTest {
             .childLiveWith(childLiveWithList)
             .build();
 
-        String childNames = "child1 child2";
 
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
@@ -3378,9 +3255,6 @@ public class ManageOrdersControllerTest {
 
         Element<String> wrappedCafcass = Element.<String>builder().value(cafcassEmail).build();
         List<Element<String>> listOfCafcassEmail = Collections.singletonList(wrappedCafcass);
-
-        List<Element<HearingData>> hearingElementList = new ArrayList<>();
-        hearingElementList.add(element(HearingData.builder().build()));
 
         DynamicList dynamicList = DynamicList.builder().value(DynamicListElement.builder().code("12345:").label("test")
             .build()).build();
@@ -3451,7 +3325,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testHearingTypeAndEstimatedTimingsValidationsForSdo() throws Exception {
+    public void testHearingTypeAndEstimatedTimingsValidationsForSdo() {
         HearingData hearingData = HearingData.builder()
             .hearingDateConfirmOptionEnum(dateReservedWithListAssit)
             .hearingEstimatedDays("ABC")
@@ -3489,11 +3363,11 @@ public class ManageOrdersControllerTest {
 
         assertNotNull(callbackResponse);
         assertNotNull(callbackResponse.getErrors());
-        assertEquals("Please enter numeric value for Hearing estimated hours", callbackResponse.getErrors().get(0));
+        assertEquals("Please enter numeric value for Hearing estimated hours", callbackResponse.getErrors().getFirst());
     }
 
     @Test
-    public void testManageOrderApplication() throws Exception {
+    public void testManageOrderApplication() {
 
         CaseData expectedCaseData = CaseData.builder()
             .id(12345L)
@@ -3624,7 +3498,7 @@ public class ManageOrdersControllerTest {
         assertThat(responseResponseEntity.getHeaders())
             .containsKey(CLIENT_CONTEXT_HEADER_PARAMETER);
 
-        ObjectMapper mapper = new ObjectMapper();
+
         assertThat(objectMapper.readTree(
             responseResponseEntity.getHeaders().getFirst(CLIENT_CONTEXT_HEADER_PARAMETER)))
             .isEqualTo(objectMapper.readTree(CLIENT_CONTEXT));
@@ -3682,7 +3556,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testExceptionForPrePopulateJudgeOrLegalAdviser() throws Exception {
+    public void testExceptionForPrePopulateJudgeOrLegalAdviser() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -3708,13 +3582,12 @@ public class ManageOrdersControllerTest {
             .build();
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
-        assertExpectedException(() -> {
-            manageOrdersController.prePopulateJudgeOrLegalAdviser(authToken, s2sToken, null, callbackRequest);
-        }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.prePopulateJudgeOrLegalAdviser(authToken, s2sToken, null, callbackRequest),
+                                RuntimeException.class, "Invalid Client");
     }
 
     @Test
-    public void testPopulatePreviewOrderWhenOccupationOrderCreated() throws Exception {
+    public void testPopulatePreviewOrderWhenOccupationOrderCreated() {
         CaseData expectedCaseData = CaseData.builder()
             .id(12345L)
             .manageOrders(ManageOrders.builder()
@@ -3756,7 +3629,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderWhenOccupationOrderAndAppOrRespPresent() throws Exception {
+    public void testPopulatePreviewOrderWhenOccupationOrderAndAppOrRespPresent() {
         CaseData expectedCaseData = CaseData.builder()
             .id(12345L)
             .manageOrders(ManageOrders.builder()
@@ -3799,7 +3672,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTestWithHearing() throws Exception {
+    public void saveOrderDetailsTestWithHearing() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -3833,8 +3706,6 @@ public class ManageOrdersControllerTest {
         Child child = Child.builder()
             .childLiveWith(childLiveWithList)
             .build();
-
-        String childNames = "child1 child2";
 
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
@@ -3910,7 +3781,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTestWithSdo() throws Exception {
+    public void saveOrderDetailsTestWithSdo() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -3944,8 +3815,6 @@ public class ManageOrdersControllerTest {
         Child child = Child.builder()
             .childLiveWith(childLiveWithList)
             .build();
-
-        String childNames = "child1 child2";
 
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
@@ -4024,7 +3893,7 @@ public class ManageOrdersControllerTest {
 
 
     @Test
-    public void saveOrderDetailsTestFailedToAutherisation() throws Exception {
+    public void saveOrderDetailsTestFailedToAutherisation() {
 
         applicant = PartyDetails.builder()
             .firstName("TestFirst")
@@ -4059,7 +3928,6 @@ public class ManageOrdersControllerTest {
             .childLiveWith(childLiveWithList)
             .build();
 
-        String childNames = "child1 child2";
 
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
@@ -4124,14 +3992,13 @@ public class ManageOrdersControllerTest {
             .build();
         when(authorisationService.isAuthorized(any(),any())).thenReturn(false);
         when(manageOrderService.setHearingDataForSdo(any(),any(),any())).thenReturn(caseData);
-        assertExpectedException(() -> {
-            manageOrdersController.saveOrderDetails(authToken, s2sToken, callbackRequest);
-        }, InvalidClientException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.saveOrderDetails(authToken, s2sToken, callbackRequest),
+                                InvalidClientException.class, "Invalid Client");
 
     }
 
     @Test
-    public void testNoHearingDataValidationFailedToAutherisation() throws Exception {
+    public void testNoHearingDataValidationFailedToAutherisation() {
         CaseData caseData = CaseData.builder()
             .createSelectOrderOptions(noticeOfProceedingsParties)
             .manageOrders(ManageOrders.builder().build())
@@ -4148,13 +4015,13 @@ public class ManageOrdersControllerTest {
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
 
-        assertExpectedException(() -> {
-            manageOrdersController.validateAndPopulateHearingData(authToken, s2sToken, callbackRequest); }, RuntimeException.class, "Invalid Client");
+        assertExpectedException(() -> manageOrdersController.validateAndPopulateHearingData(authToken, s2sToken, callbackRequest),
+                                RuntimeException.class, "Invalid Client");
 
     }
 
     @Test
-    public void testAddressValidationError() throws Exception {
+    public void testAddressValidationError() {
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication(PrlAppsConstants.C100_CASE_TYPE)
             .build();
@@ -4179,11 +4046,11 @@ public class ManageOrdersControllerTest {
 
         assertNotNull(callbackResponse);
         assertNotNull(callbackResponse.getErrors());
-        assertEquals(errors.get(0), callbackResponse.getErrors().get(0));
+        assertEquals(errors.getFirst(), callbackResponse.getErrors().getFirst());
     }
 
     @Test
-    public void testCaseDataWhenNoValidationErrorReturned() throws Exception {
+    public void testCaseDataWhenNoValidationErrorReturned() {
         CaseData caseData = CaseData.builder()
             .id(123L)
             .build();
@@ -4212,7 +4079,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testValidateAddressFailedToAuthorisation() throws Exception {
+    public void testValidateAddressFailedToAuthorisation() {
         CaseData caseData1 = CaseData.builder()
             .build();
 
@@ -4227,9 +4094,8 @@ public class ManageOrdersControllerTest {
 
         Mockito.when(authorisationService.isAuthorized(authToken,s2sToken)).thenReturn(false);
 
-        assertExpectedException(() -> {
-            manageOrdersController
-                .validateRespondentAndOtherPersonAddress(authToken, s2sToken, callbackRequest); },
+        assertExpectedException(() -> manageOrdersController
+            .validateRespondentAndOtherPersonAddress(authToken, s2sToken, callbackRequest),
                                 RuntimeException.class, "Invalid Client");
 
     }
@@ -4400,7 +4266,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTest_createCustomOrder_withServeOrder_shouldStillAddOrder() throws Exception {
+    public void saveOrderDetailsTest_createCustomOrder_withServeOrder_shouldStillAddOrder() {
         // Test that when createCustomOrder with doYouWantToServeOrder=Yes,
         // the order IS still added in aboutToSubmit because CCD doesn't persist mid-event data.
         // This ensures the order is in orderCollection for the submitted callback to update.
@@ -4465,7 +4331,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTest_createAnOrder_withoutServeOrder_shouldAddOrder() throws Exception {
+    public void saveOrderDetailsTest_createAnOrder_withoutServeOrder_shouldAddOrder() {
         // Test that createAnOrder without serving adds order in about-to-submit
 
         ManageOrders manageOrders = ManageOrders.builder()
@@ -4516,7 +4382,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTest_createCustomOrder_withoutServeOrder_shouldAddOrder() throws Exception {
+    public void saveOrderDetailsTest_createCustomOrder_withoutServeOrder_shouldAddOrder() {
         // Test that when createCustomOrder with doYouWantToServeOrder=No,
         // the order IS added in aboutToSubmit
 
@@ -4584,7 +4450,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTest_createCustomOrder_withNullServeOrderData_shouldAddOrder() throws Exception {
+    public void saveOrderDetailsTest_createCustomOrder_withNullServeOrderData_shouldAddOrder() {
         // Test that when createCustomOrder with null serveOrderData,
         // the order IS added in aboutToSubmit (backward compatibility)
 
@@ -4647,7 +4513,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTest_createCustomOrder_withNoExistingOrders_shouldCreateOrderCollection() throws Exception {
+    public void saveOrderDetailsTest_createCustomOrder_withNoExistingOrders_shouldCreateOrderCollection() {
         // REGRESSION TEST: Proves orderCollection won't be null after custom order creation
         // This was the root cause of NullPointerException in ManageOrderEmailService.getServedOrderDocumentsAndAdditionalDocuments
         // when custom orders were created on cases with no existing orders
@@ -4738,7 +4604,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void finalizeOrderSubmissionAndSendNotifications_customOrder_shouldUseCallbackDataNotDatabase() throws Exception {
+    public void finalizeOrderSubmissionAndSendNotifications_customOrder_shouldUseCallbackDataNotDatabase() {
         // Test that custom order fields are retrieved from callback request data, not database
         // This is critical because the database won't have these fields until after the event completes
 
@@ -4814,7 +4680,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void finalizeOrderSubmissionAndSendNotifications_nonCustomOrder_shouldNotCallCombine() throws Exception {
+    public void finalizeOrderSubmissionAndSendNotifications_nonCustomOrder_shouldNotCallCombine() {
         // Test that when manageOrdersOptions is not createCustomOrder, combineAndFinalizeCustomOrder is not called
 
         ManageOrders manageOrders = ManageOrders.builder()
@@ -4868,7 +4734,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void finalizeOrderSubmissionAndSendNotifications_staleCustomOrderDoc_shouldNotTriggerCustomOrderFlow() throws Exception {
+    public void finalizeOrderSubmissionAndSendNotifications_staleCustomOrderDoc_shouldNotTriggerCustomOrderFlow() {
         // Test that stale customOrderDoc from a previous custom order does NOT trigger custom order flow.
         // Only customOrderNameOption in callback data should trigger it.
         // This prevents upload orders from being incorrectly treated as custom orders.
@@ -4934,7 +4800,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void finalizeOrderSubmissionAndSendNotifications_customOrder_shouldCopyAllFieldsFromCallbackData() throws Exception {
+    public void finalizeOrderSubmissionAndSendNotifications_customOrder_shouldCopyAllFieldsFromCallbackData() {
         // Test that all custom order fields are copied from callback data to caseDataUpdated
 
         Document customOrderDoc = Document.builder()
@@ -5046,7 +4912,7 @@ public class ManageOrdersControllerTest {
 
     @Test
     @SuppressWarnings("unchecked")
-    public void finalizeOrderSubmissionAndSendNotifications_customOrder_shouldCopyDateEndsToFl404ForNonMolestation() throws Exception {
+    public void finalizeOrderSubmissionAndSendNotifications_customOrder_shouldCopyDateEndsToFl404ForNonMolestation() {
         // Test that customOrderDateEnds is copied to fl404CustomFields.fl404bDateOrderEnd for FL404-related orders
 
         Document customOrderDoc = Document.builder()
@@ -5128,7 +4994,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulateHeaderPreFillsJudgeTitleWhenJudgeLoggedIn() throws Exception {
+    public void testPopulateHeaderPreFillsJudgeTitleWhenJudgeLoggedIn() {
         // Given - a judge is logged in
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -5176,7 +5042,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulateHeaderDoesNotPreFillJudgeTitleWhenCourtAdminLoggedIn() throws Exception {
+    public void testPopulateHeaderDoesNotPreFillJudgeTitleWhenCourtAdminLoggedIn() {
         // Given - a court admin is logged in (not a judge)
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -5213,7 +5079,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulateHeaderPreFillsLegalAdviserNameWhenLegalAdviserLoggedIn() throws Exception {
+    public void testPopulateHeaderPreFillsLegalAdviserNameWhenLegalAdviserLoggedIn() {
         // Given - a legal adviser is logged in
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -5261,7 +5127,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulateHeaderDetectsLegalAdviserViaAmRoles() throws Exception {
+    public void testPopulateHeaderDetectsLegalAdviserViaAmRoles() {
         // Given - a legal adviser is logged in and detected via AM roles
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -5309,7 +5175,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulateHeaderPreFillsMagistrateNameWhenMagistrateLoggedIn() throws Exception {
+    public void testPopulateHeaderPreFillsMagistrateNameWhenMagistrateLoggedIn() {
         // Given - a magistrate is logged in
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -5359,7 +5225,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTest_createCustomOrder_withJudgeReview_shouldAddOrderDespiteStaleDoYouWantToServe() throws Exception {
+    public void saveOrderDetailsTest_createCustomOrder_withJudgeReview_shouldAddOrderDespiteStaleDoYouWantToServe() {
         // Test that when createCustomOrder with judgeOrLegalAdvisorCheck,
         // the order IS added even if doYouWantToServeOrder=Yes (stale value from previous order)
         // This is because judge review flow skips the serve page, so doYouWantToServeOrder is stale
@@ -5429,7 +5295,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTest_createCustomOrder_withHearingDetails_shouldProcessHearingData() throws Exception {
+    public void saveOrderDetailsTest_createCustomOrder_withHearingDetails_shouldProcessHearingData() {
         // Test that when createCustomOrder has ordersHearingDetails populated,
         // hearingDataService.getHearingDataForSelectedHearing is called to process future hearing data
 
@@ -5507,7 +5373,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void saveOrderDetailsTest_createAnOrder_withManagerCheck_shouldAddOrderDespiteStaleDoYouWantToServe() throws Exception {
+    public void saveOrderDetailsTest_createAnOrder_withManagerCheck_shouldAddOrderDespiteStaleDoYouWantToServe() {
         // Test that when createAnOrder with managerCheck,
         // the order IS added even if doYouWantToServeOrder=Yes (stale value from previous order)
 
@@ -5563,7 +5429,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulateHeaderTask_shouldSetIsInvokedFromTask() throws Exception {
+    public void testPopulateHeaderTask_shouldSetIsInvokedFromTask() {
         CaseData caseData = CaseData.builder()
             .id(12345L)
             .caseTypeOfApplication("C100")
@@ -5617,7 +5483,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulateFromHearing_forCustomOrder_shouldCopyFieldsWhenApprovedAtHearing() throws Exception {
+    public void testPopulateFromHearing_forCustomOrder_shouldCopyFieldsWhenApprovedAtHearing() {
         Map<String, Object> stringObjectMap = new HashMap<>();
         stringObjectMap.put("id", 12345L);
         stringObjectMap.put("customOrderWasApprovedAtHearing", "Yes");
@@ -5653,7 +5519,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulateFromHearing_forCustomOrder_shouldClearHearingsTypeWhenNotApproved() throws Exception {
+    public void testPopulateFromHearing_forCustomOrder_shouldClearHearingsTypeWhenNotApproved() {
         Map<String, Object> stringObjectMap = new HashMap<>();
         stringObjectMap.put("id", 12345L);
         stringObjectMap.put("customOrderWasApprovedAtHearing", "No");
@@ -5690,7 +5556,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulateFromHearing_forNonCustomOrder_shouldNotCopyCustomFields() throws Exception {
+    public void testPopulateFromHearing_forNonCustomOrder_shouldNotCopyCustomFields() {
         Map<String, Object> stringObjectMap = new HashMap<>();
         stringObjectMap.put("id", 12345L);
         stringObjectMap.put("customOrderWasApprovedAtHearing", "Yes");
@@ -5745,7 +5611,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testManageOrderMidEvent_forCustomOrder_shouldPopulateHearingsDropdown() throws Exception {
+    public void testManageOrderMidEvent_forCustomOrder_shouldPopulateHearingsDropdown() {
         Map<String, Object> stringObjectMap = new HashMap<>();
         stringObjectMap.put("id", 12345L);
 
@@ -5821,11 +5687,11 @@ public class ManageOrdersControllerTest {
         assertNotNull(response);
         assertNotNull(response.getErrors());
         assertEquals(1, response.getErrors().size());
-        assertThat(response.getErrors().get(0)).contains("Failed to render custom order preview");
+        assertThat(response.getErrors().getFirst()).contains("Failed to render custom order preview");
     }
 
     @Test
-    public void testSaveOrderDetails_shouldReturnErrorWhenSetHearingDataFails() throws Exception {
+    public void testSaveOrderDetails_shouldReturnErrorWhenSetHearingDataFails() {
         ManageOrders manageOrders = ManageOrders.builder()
             .isCaseWithdrawn(No)
             .build();
@@ -5869,7 +5735,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testSaveOrderDetails_shouldReturnDefaultErrorMessageWhenExceptionMessageIsBlank() throws Exception {
+    public void testSaveOrderDetails_shouldReturnDefaultErrorMessageWhenExceptionMessageIsBlank() {
         ManageOrders manageOrders = ManageOrders.builder()
             .isCaseWithdrawn(No)
             .build();
@@ -5913,7 +5779,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void finalizeOrderSubmission_customOrder_withNullAmendCheck_shouldProcessAsDraft() throws Exception {
+    public void finalizeOrderSubmission_customOrder_withNullAmendCheck_shouldProcessAsDraft() {
         // Test covers the amendCheck = null path when amendOrderSelectCheckOptions is null
         Document customOrderDoc = Document.builder()
             .documentUrl("http://custom.url")
@@ -5982,7 +5848,7 @@ public class ManageOrdersControllerTest {
 
     @Test
     @SuppressWarnings("unchecked")
-    public void finalizeOrderSubmission_customOrder_shouldAddOnlyNewOrderToExistingCollection() throws Exception {
+    public void finalizeOrderSubmission_customOrder_shouldAddOnlyNewOrderToExistingCollection() {
         // Test that when database has existing orders and callback has existing + new order,
         // only the new order is added (existing orders preserved)
 
@@ -6073,7 +5939,7 @@ public class ManageOrdersControllerTest {
 
     @Test
     @SuppressWarnings("unchecked")
-    public void finalizeOrderSubmission_customOrder_shouldPreserveExistingOrdersWhenNoNewOrder() throws Exception {
+    public void finalizeOrderSubmission_customOrder_shouldPreserveExistingOrdersWhenNoNewOrder() {
         // Test that when callback has same orders as database (same UUIDs), nothing is modified
 
         // Database has one existing order
@@ -6148,12 +6014,12 @@ public class ManageOrdersControllerTest {
         List<Map<String, Object>> resultCollection = (List<Map<String, Object>>) capturedMap.get("orderCollection");
         assertNotNull(resultCollection);
         assertEquals(1, resultCollection.size());
-        assertEquals(existingOrderId, resultCollection.get(0).get("id"));
+        assertEquals(existingOrderId, resultCollection.getFirst().get("id"));
     }
 
     @Test
     @SuppressWarnings("unchecked")
-    public void finalizeOrderSubmission_customOrder_shouldNotLoseOrdersWhenCallbackHasFewer() throws Exception {
+    public void finalizeOrderSubmission_customOrder_shouldNotLoseOrdersWhenCallbackHasFewer() {
         // CRITICAL TEST: Ensures we never lose existing orders even if callback somehow has fewer orders
 
         // Database has TWO existing orders
@@ -6248,7 +6114,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderWhenOrderUploadedForCustomOrder_withExistingMagistrateLastName() throws Exception {
+    public void testPopulatePreviewOrderWhenOrderUploadedForCustomOrder_withExistingMagistrateLastName() {
         List<Element<uk.gov.hmcts.reform.prl.models.complextypes.MagistrateLastName>> magistrateLastNames =
             List.of(uk.gov.hmcts.reform.prl.utils.ElementUtils.element(
                 uk.gov.hmcts.reform.prl.models.complextypes.MagistrateLastName.builder()
@@ -6288,7 +6154,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulatePreviewOrderWhenOrderUploaded_whenManageOrdersOptionsIsNull() throws Exception {
+    public void testPopulatePreviewOrderWhenOrderUploaded_whenManageOrdersOptionsIsNull() {
         CaseData expectedCaseData = CaseData.builder()
             .id(12345L)
             .manageOrdersOptions(null)
@@ -6319,7 +6185,7 @@ public class ManageOrdersControllerTest {
     }
 
     @Test
-    public void testPopulateFromHearing_forCustomOrder_whenCustomWasApprovedIsNull() throws Exception {
+    public void testPopulateFromHearing_forCustomOrder_whenCustomWasApprovedIsNull() {
         Map<String, Object> stringObjectMap = new HashMap<>();
         stringObjectMap.put("id", 12345L);
         stringObjectMap.put("customOrderHearingsType", "hearingTypeValue");
