@@ -61,9 +61,7 @@ import uk.gov.hmcts.reform.prl.enums.manageorders.OtherOrganisationOptions;
 import uk.gov.hmcts.reform.prl.enums.manageorders.SelectTypeOfOrderEnum;
 import uk.gov.hmcts.reform.prl.enums.manageorders.ServeOtherPartiesOptions;
 import uk.gov.hmcts.reform.prl.enums.manageorders.WithDrawTypeOfOrderEnum;
-import uk.gov.hmcts.reform.prl.enums.sdo.SdoFurtherInstructionsEnum;
 import uk.gov.hmcts.reform.prl.enums.sdo.SdoHearingsAndNextStepsEnum;
-import uk.gov.hmcts.reform.prl.enums.sdo.SdoLocalAuthorityEnum;
 import uk.gov.hmcts.reform.prl.enums.serveorder.CafcassCymruDocumentsEnum;
 import uk.gov.hmcts.reform.prl.enums.serveorder.LocalAuthorityDocumentsEnum;
 import uk.gov.hmcts.reform.prl.enums.serviceofapplication.SoaSolicitorServingRespondentsEnum;
@@ -201,6 +199,7 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
+@SuppressWarnings("unchecked")
 class ManageOrderServiceTest {
 
     @InjectMocks
@@ -696,7 +695,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -732,7 +731,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -768,7 +767,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -804,7 +803,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -840,7 +839,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -876,7 +875,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -993,7 +992,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1029,7 +1028,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1064,7 +1063,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1101,7 +1100,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1407,7 +1406,7 @@ class ManageOrderServiceTest {
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
 
         manageOrderService.updateCaseDataWithAppointedGuardianNames(caseDetails, namesList);
-        assertEquals("Full Name", caseDataNameList.get(0).getValue().getGuardianFullName());
+        assertEquals("Full Name", caseDataNameList.getFirst().getValue().getGuardianFullName());
     }
 
 
@@ -1538,7 +1537,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1575,7 +1574,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1608,7 +1607,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1645,8 +1644,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
-        List<OrderRecipientsEnum> recipientList = new ArrayList<>();
+
         List<Element<PartyDetails>> partyDetails = new ArrayList<>();
         PartyDetails details = PartyDetails.builder()
             .solicitorOrg(Organisation.builder().organisationName("test Org").build())
@@ -1693,7 +1691,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1730,7 +1728,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2153,32 +2151,13 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-
-        List<DynamicMultiselectListElement> elements = new ArrayList<>();
-        DynamicMultiselectListElement element = DynamicMultiselectListElement.builder()
-            .code("1234")
-            .label("test label").build();
-        elements.add(element);
-        Element<OrderDetails> orders = Element.<OrderDetails>builder().id(uuid).value(OrderDetails
-                                                                                          .builder()
-                                                                                          .orderDocument(Document
-                                                                                                             .builder()
-                                                                                                             .build())
-                                                                                          .dateCreated(now)
-                                                                                          .orderTypeId(TEST_UUID)
-                                                                                          .otherDetails(
-                                                                                              OtherOrderDetails.builder().build())
-                                                                                          .build()).build();
-        List<Element<OrderDetails>> orderList = new ArrayList<>();
-        orderList.add(orders);
         when(dgsService.generateDocument(Mockito.anyString(), Mockito.any(CaseDetails.class), Mockito.any()))
             .thenReturn(generatedDocumentInfo);
         when(dateTime.now()).thenReturn(LocalDateTime.now());
         when(hearingService.createAutomatedHearing(authToken, null))
             .thenThrow(new ManageOrderRuntimeException("Invalid Json"));
-        Exception exception = assertThrows(ManageOrderRuntimeException.class, () -> {
-            hearingService.createAutomatedHearing(authToken, null);
-        });
+        Exception exception = assertThrows(ManageOrderRuntimeException.class,
+                                           () -> hearingService.createAutomatedHearing(authToken, null));
         String expectedMessage = "Invalid Json";
         assertTrue(expectedMessage.contains(exception.getMessage()));
     }
@@ -2212,8 +2191,6 @@ class ManageOrderServiceTest {
                                                       .build())))
             .build();
 
-        OrderDetails orderDetails = OrderDetails.builder().typeOfOrder("kkkkk").dateCreated(LocalDateTime.now()).build();
-        Element<OrderDetails> orders1 = element(orderDetails);
         Element<OrderDetails> orders = Element.<OrderDetails>builder().id(uuid).value(OrderDetails
                                                                                           .builder()
                                                                                           .orderTypeId(TEST_UUID)
@@ -2273,8 +2250,6 @@ class ManageOrderServiceTest {
                                                       .build())))
             .build();
 
-        OrderDetails orderDetails = OrderDetails.builder().typeOfOrder("kkkkk").dateCreated(LocalDateTime.now()).build();
-        Element<OrderDetails> orders1 = element(orderDetails);
         Element<OrderDetails> orders = Element.<OrderDetails>builder().id(uuid).value(OrderDetails
                                                                                           .builder()
                                                                                           .orderType("null")
@@ -3632,7 +3607,7 @@ class ManageOrderServiceTest {
         when(hearingService.getHearings(authToken, "123")).thenReturn(hearings);
 
         //invoke
-        DynamicList dynamicList1 = manageOrderService.populateHearingsDropdown(authToken, caseData);
+        manageOrderService.populateHearingsDropdown(authToken, caseData);
 
         //asserts
         assertNotNull(caseData.getManageOrders().getHearingsType());
@@ -3748,7 +3723,7 @@ class ManageOrderServiceTest {
             .build();
         when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
         manageOrderService.resetChildOptions(callbackRequest);
-        assertEquals(null, callbackRequest.getCaseDetails().getData().get(CHILD_OPTION));
+        assertNull(callbackRequest.getCaseDetails().getData().get(CHILD_OPTION));
     }
 
     @Test
@@ -3805,15 +3780,6 @@ class ManageOrderServiceTest {
 
     @Test
     void testGetJudgeFullName() {
-        StandardDirectionOrder standardDirectionOrder = StandardDirectionOrder.builder()
-            .sdoAllocateOrReserveJudgeName(JudicialUser.builder().idamId("1234").personalCode("ABC").build())
-            .sdoLocalAuthorityList(of(SdoLocalAuthorityEnum.localAuthorityLetter))
-            .sdoFurtherList(of(SdoFurtherInstructionsEnum.newDirection))
-            .build();
-        CaseData caseData = CaseData.builder()
-            .id(12345L)
-            .standardDirectionOrder(standardDirectionOrder)
-            .build();
         List<JudicialUsersApiResponse> judicialUsersApiResponses = new ArrayList<>();
         JudicialUsersApiResponse judicialUsersApiResponse = JudicialUsersApiResponse.builder()
             .fullName("Test")
@@ -3950,7 +3916,7 @@ class ManageOrderServiceTest {
         when(dynamicMultiSelectListService.getChildrenMultiSelectList(caseData)).thenReturn(of(dynamicMultiselectListElementUpdated));
 
         CaseData caseData1 = manageOrderService.setChildOptionsIfOrderAboutAllChildrenYes(caseData);
-        assertEquals("John (Child 1)", caseData1.getManageOrders().getChildOption().getListItems().get(0).getLabel());
+        assertEquals("John (Child 1)", caseData1.getManageOrders().getChildOption().getListItems().getFirst().getLabel());
     }
 
     @Test
@@ -4011,7 +3977,7 @@ class ManageOrderServiceTest {
     void testCleanUpSelectedManageOrderOptions() {
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("manageOrdersOptions","manageOrdersOptions");
-        manageOrderService.cleanUpSelectedManageOrderOptions(caseDataUpdated);
+        ManageOrderService.cleanUpSelectedManageOrderOptions(caseDataUpdated);
         assertNull(caseDataUpdated.get("manageOrdersOptions"));
 
     }
@@ -4119,7 +4085,7 @@ class ManageOrderServiceTest {
         assertNotNull(caseDataUpdated.get("additionalOrderDocuments"));
         List<Element<AdditionalOrderDocument>> additionalOrderDocuments =
             (List<Element<AdditionalOrderDocument>>) caseDataUpdated.get("additionalOrderDocuments");
-        assertEquals(2, additionalOrderDocuments.get(0).getValue().getAdditionalDocuments().size());
+        assertEquals(2, additionalOrderDocuments.getFirst().getValue().getAdditionalDocuments().size());
     }
 
     @Test
@@ -4153,7 +4119,7 @@ class ManageOrderServiceTest {
     void testCleanUpServeOrderOptions() {
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("serveOrderAdditionalDocuments","serveOrderAdditionalDocuments");
-        manageOrderService.cleanUpServeOrderOptions(caseDataUpdated);
+        ManageOrderService.cleanUpServeOrderOptions(caseDataUpdated);
         assertNull(caseDataUpdated.get("serveOrderAdditionalDocuments"));
     }
 
@@ -4567,7 +4533,6 @@ class ManageOrderServiceTest {
         List<Element<OrderDetails>> orderList = new ArrayList<>();
         orderList.add(orders);
 
-        List<Element<PartyDetails>> partyDetails = new ArrayList<>();
         PartyDetails details = PartyDetails.builder().firstName("first").lastName("lastname")
             .representativeFirstName("repFirstName")
             .representativeLastName("repLastName")
@@ -4937,7 +4902,7 @@ class ManageOrderServiceTest {
                                  .code("6bb5e9ac-df97-4593-8b22-3969dc0bb4e1")
                                  .label("Sam Nolan")
                                  .build());
-        CaseData caseData = CaseData.builder()
+        return CaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
             .manageOrders(ManageOrders.builder().serveToRespondentOptions(YesNoNotApplicable.No)
                               .recipientsOptions(DynamicMultiSelectList.builder()
@@ -4950,7 +4915,6 @@ class ManageOrderServiceTest {
                                                 .build())
                               .build())
             .build();
-        return caseData;
     }
 
     @Test
@@ -5299,7 +5263,7 @@ class ManageOrderServiceTest {
         List<Element<OrderDetails>> orderCollection = (List<Element<OrderDetails>>) response.get("orderCollection");
 
         assertEquals("Financial compensation order following C79 enforcement application (C82)",
-                     orderCollection.get(0).getValue().getOrderTypeId());
+                     orderCollection.getFirst().getValue().getOrderTypeId());
         assertNotNull(response);
 
     }
@@ -5720,7 +5684,7 @@ class ManageOrderServiceTest {
         CaseData caseDataResp = manageOrderService.setHearingDataForSdo(caseData, hearings, "auth");
         assertNull(caseData.getStandardDirectionOrder().getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab());
         assertEquals(uuid, caseDataResp.getStandardDirectionOrder()
-            .getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab().get(0).getId());
+            .getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab().getFirst().getId());
     }
 
     @Test
@@ -5823,14 +5787,14 @@ class ManageOrderServiceTest {
         when(dateTime.now()).thenReturn(LocalDateTime.now());
         List<Element<OrderDetails>> orderDetails = manageOrderService.serveOrder(caseData, orderList);
         assertNotNull(orderDetails);
-        assertNotNull(orderDetails.get(0));
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails());
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails().getServedParties());
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails().getServedParties().get(0));
+        assertNotNull(orderDetails.getFirst());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties().getFirst());
         assertEquals(
-            orderDetails.get(0).getValue().getServeOrderDetails().getServedParties().get(0).getValue()
+            orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties().getFirst().getValue()
                 .getPartyId(),
-            (orders.getValue().getServeOrderDetails().getServedParties().get(0).getValue().getPartyId())
+            (orders.getValue().getServeOrderDetails().getServedParties().getFirst().getValue().getPartyId())
         );
     }
 
@@ -6312,9 +6276,8 @@ class ManageOrderServiceTest {
         List<Element<HearingData>> hearingsList = manageOrders1.getOrdersHearingDetails();
         when(hearingService.createAutomatedHearing(eq(authToken), any()))
             .thenThrow(new ManageOrderRuntimeException("Invalid Json"));
-        Exception exception = assertThrows(ManageOrderRuntimeException.class, () -> {
-            manageOrderService.createAutomatedHearingManagement(authToken, caseData, hearingsList);
-        });
+        Exception exception = assertThrows(ManageOrderRuntimeException.class,
+                                           () -> manageOrderService.createAutomatedHearingManagement(authToken, caseData, hearingsList));
         String expectedMessage = "Invalid Json";
         assertTrue(expectedMessage.contains(exception.getMessage()));
     }
@@ -6851,11 +6814,6 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        List<DynamicMultiselectListElement> elements = new ArrayList<>();
-        DynamicMultiselectListElement element = DynamicMultiselectListElement.builder()
-            .code("1234")
-            .label("test label").build();
-        elements.add(element);
         ManageOrders manageOrders = ManageOrders.builder()
             .judgeOrMagistrateTitle(JudgeOrMagistrateTitleEnum.circuitJudge)
             .build();
@@ -6888,14 +6846,6 @@ class ManageOrderServiceTest {
                                                                                           .build()).build();
         List<Element<OrderDetails>> orderList = new ArrayList<>();
         orderList.add(orders);
-
-        List<Element<PartyDetails>> partyDetails = new ArrayList<>();
-        PartyDetails details = PartyDetails.builder().firstName("first").lastName("lastname")
-            .solicitorOrg(Organisation.builder().organisationName("test Org").build())
-            .build();
-        Element<PartyDetails> partyDetailsElement = element(details);
-        partyDetails.add(partyDetailsElement);
-
 
 
         when(dgsService.generateDocument(Mockito.anyString(), Mockito.any(CaseDetails.class), Mockito.any()))
@@ -7853,7 +7803,7 @@ class ManageOrderServiceTest {
         assertNotNull(serveOrderList);
         assertNotNull(serveOrderList.getValue());
         assertEquals(1, serveOrderList.getValue().size());
-        assertEquals(secondOrderId, serveOrderList.getValue().get(0).getCode());
+        assertEquals(secondOrderId, serveOrderList.getValue().getFirst().getCode());
     }
 
     @Test
@@ -7893,7 +7843,7 @@ class ManageOrderServiceTest {
         assertNotNull(serveOrderList);
         assertNotNull(serveOrderList.getValue());
         assertEquals(1, serveOrderList.getValue().size());
-        assertEquals(firstOrderId, serveOrderList.getValue().get(0).getCode());
+        assertEquals(firstOrderId, serveOrderList.getValue().getFirst().getCode());
     }
 
     @Test
@@ -7927,7 +7877,7 @@ class ManageOrderServiceTest {
         List<Element<DraftOrder>> draftOrders = (List<Element<DraftOrder>>) result.get("draftOrderCollection");
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
-        assertEquals(Yes, draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertEquals(Yes, draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
@@ -7963,7 +7913,7 @@ class ManageOrderServiceTest {
         List<Element<DraftOrder>> draftOrders = (List<Element<DraftOrder>>) result.get("draftOrderCollection");
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
-        assertEquals(Yes, draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertEquals(Yes, draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
@@ -7999,7 +7949,7 @@ class ManageOrderServiceTest {
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
         // uploadAnOrder does not have Page 19, so AHR should not be triggered
-        assertNull(draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertNull(draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
@@ -8034,11 +7984,11 @@ class ManageOrderServiceTest {
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
         // Only COURT_ADMIN should trigger AHR
-        assertNull(draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertNull(draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
-    void testSetFinalOrderCollection_courtAdmin_noCheck_eligibleForAhr_setsAutoHearingPending() throws Exception {
+    void testSetFinalOrderCollection_courtAdmin_noCheck_eligibleForAhr_setsAutoHearingPending() {
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
             .forename("Test")
             .surname("Admin")
@@ -8084,11 +8034,11 @@ class ManageOrderServiceTest {
         List<Element<OrderDetails>> orderCollection = (List<Element<OrderDetails>>) result.get(ORDER_COLLECTION);
         assertNotNull(orderCollection);
         assertFalse(orderCollection.isEmpty());
-        assertEquals(Yes, orderCollection.get(0).getValue().getIsAutoHearingReqPending());
+        assertEquals(Yes, orderCollection.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
-    void testSetFinalOrderCollection_courtAdmin_noCheck_notEligibleForAhr_doesNotSetAutoHearingPending() throws Exception {
+    void testSetFinalOrderCollection_courtAdmin_noCheck_notEligibleForAhr_doesNotSetAutoHearingPending() {
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
             .forename("Test")
             .surname("Admin")
@@ -8131,7 +8081,7 @@ class ManageOrderServiceTest {
         assertNotNull(orderCollection);
         assertFalse(orderCollection.isEmpty());
         // When not eligible for AHR, flag should not be Yes (can be null or No)
-        assertNotEquals(Yes, orderCollection.get(0).getValue().getIsAutoHearingReqPending());
+        assertNotEquals(Yes, orderCollection.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @ParameterizedTest(name = "Testing LA CIR document: {0}")
@@ -8163,7 +8113,7 @@ class ManageOrderServiceTest {
             authToken,
             EventRequestData.builder().build(),
             StartEventResponse.builder().build(),
-            new HashMap<String, Object>(),
+            new HashMap<>(),
             caseData,
             null
         );
@@ -8236,7 +8186,7 @@ class ManageOrderServiceTest {
             authToken,
             EventRequestData.builder().build(),
             StartEventResponse.builder().build(),
-            new HashMap<String, Object>(),
+            new HashMap<>(),
             caseData,
             null
         );
